src/pages/Dashboard/Orders/UserOrders.module.scss
.dashboardOrders {
  // padding: 2rem;
  max-width: 1200px;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  // gap: 16px;
  background-color: var(--bg-color);
  @media (max-width: 1100px) {
    padding: 0 20px;
  }
  @media (max-width: 767px) {
    padding: 0 15px 40px;
    background: #f8f7fa;
  }
}

.dashboardOrdersTitle {
  display: none;
  margin-bottom: 28px;
  font-size: 2.625rem;
  line-height: 150%;
  font-weight: 500;
  @media (max-width: 767px) {
    display: block;
    margin-bottom: 16px;
  }
}

.orderTitle {
  display: flex;
  align-items: center;
  font-size: 24px;
  flex-grow: 1;
  gap: 1rem;
  // padding: 0.5rem;

  .orderInfoHeader {
    flex: 1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 16px;

    .productPrice {
      color: var(--text-color);
    }
  }

  .orderNumber {
    flex-grow: 1;
    text-align: left;
    color: var(--text-color);
  }

  .productQuantity {
    color: var(--secondary-text-color);
    font-size: 16px;
    font-weight: 400;
  }

  > div > img{
    
  }

  

  .orderProductPreview {
    width: 58px;
    height: 58px;
    border-radius: 12px;
    overflow: hidden;
    border: 1px solid #eae4ee;
    @media (max-width: 767px) {
      width: 40px;
      height: 40px;
      border: 0;
    }

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
}

.orderProducts {
  // margin-bottom: 1.5rem;
  border-bottom: 1px solid #e5e7eb;
  border-top: 1px solid #e5e7eb;

  h3 {
    margin-bottom: 1rem;
    color: #1a1a1a;
    font-weight: 600;
  }

  .productItem {
    display: flex;
    gap: 8px;
    padding: 16px 30px;
    // border-bottom: 1px solid var(--button-disabled-color);
    // margin-bottom: 1rem;
    @media (max-width: 767px) {
      padding: 16px;
    }

    .productImage {
      width: 60px;
      height: 60px;
      border: 1px solid #eae4ee;
      border-radius: 12px;
      object-fit: cover;
    }

    .productDetails {
      flex: 1;
      flex-direction: row;
      display: flex;
      gap: 8px;
      justify-content: space-between;
      align-items: center;
    }

    .productName {
      flex-grow: 1;
      color: #6f4c9a;
      font-size: 16px;
      line-height: 1.5;
      font-weight: 400;
      text-decoration: underline;
    }

    .productQuantity {
      color: var(--secondary-text-color);
      font-size: 16px;
      font-weight: 400;
    }

    .productPrice {
      font-size: 24px;
      color: var(--text-color);
    }
  }
}

// .orderDetails {
//   padding: 1rem;
// }

.orderInfo {
  padding: 30px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  @media (max-width: 800px) {
    flex-direction: column;
    align-items: flex-start;
    padding: 16px;
  }
  &__left {
    display: grid;
    grid-template-columns: min-content min-content auto;
    grid-template-rows: repeat(3, auto);
    gap: 12px 50px;
    @media (max-width: 800px) {
      margin-bottom: 16px;
      gap: 12px;
    }
  }
  label {
    white-space: nowrap;
    grid-column: 1;
    color: var(--secondary-text-color);
  }

  p {
    white-space: nowrap;
    grid-column: 2;
    text-align: right;
  }

  .orderAgainButton {
    grid-column: 3;
    max-width: 170px;
    justify-self: end;
  }
}

@media screen and (max-width: 768px) {
  .orderTitle {
    font-size: 16px;
  }
  .productQuantity {
    display: none;
  }
  .orderProducts {
    .productItem {
      .productName {
        font-size: 12px;
        font-weight: 400;
      }

      .productQuantity {
        font-size: 12px;
        font-weight: 400;
      }

      .productPrice {
        font-size: 16px;
      }
    }
  }
  .orderInfo__left {
    display: block;

    p {
      text-align: left;
      margin: 0.5rem 0;
    }

    .orderAgainButton {
      width: 100%;
      max-width: 100%;
    }
  }
}

